--- a/index.html
+++ b/index.html
@@ -71,6 +71,35 @@
     </div>
     </div>
 
+    <h2>¡Ejercicio Suma y Resta!</h2>
+    <div>
+        <div>
+            <h2>
+                Resultado: <span id="resultado"></span>
+            </h2>
+            <div>
+                <div>
+                    <div>
+                        <label for="">Valor 1</label>
+                        <input id="valor1" type="text">
+                    </div>
+                    <div>
+                        <label for="">Valor 2</label>
+                        <input id="valor2" type="text">
+                    </div>
+                    <div style="display: flex">
+                        <button id="btn-sumar" type="button">
+                            Sumar
+                        </button>
+                        <button id="btn-restar" type="button">
+                            Restar
+                        </button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
 
     <script src="./assets/js/app.js">
    
